--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
     "@popperjs/core": "^2.9.2",
     "autoprefixer": "^10.2.5",
     "bootstrap": "^5.0.0-beta3",
+    "bootstrap-icons": "^1.5.0",
     "jquery": "^3.6.0",
     "popper.js": "^1.16.1",
     "postcss-cli": "^8.3.1"
