--- a/config.toml
+++ b/config.toml
@@ -1,5 +1,5 @@
 title = "Anurag Kar"
-baseURL = "https://anuragkar16.netlify.app/"
+baseURL = "https://anuragkar.netlify.app/"
 languageCode = "en-us"
 relativeURLs = true
 Author = "Anurag kar"
