--- a/package.json
+++ b/package.json
@@ -1,20 +1,33 @@
 {
-  "name": "devon",
-  "version": "1.0.0",
-  "description": "portfolio",
-  "main": "index.html",
-  "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
-  },
-  "author": "Anurag Kar",
-  "license": "ISC",
+ "author": "Anurag Kar",
+ "comments": {
   "dependencies": {
-    "@popperjs/core": "^2.9.2",
-    "autoprefixer": "^10.2.5",
-    "bootstrap": "^5.0.0-beta3",
-    "bootstrap-icons": "^1.5.0",
-    "jquery": "^3.6.0",
-    "popper.js": "^1.16.1",
-    "postcss-cli": "^8.3.1"
-  }
+   "@popperjs/core": "project",
+   "autoprefixer": "project",
+   "bootstrap": "project",
+   "bootstrap-icons": "project",
+   "jquery": "project",
+   "popper.js": "project",
+   "postcss-cli": "project"
+  },
+  "devDependencies": {}
+ },
+ "dependencies": {
+  "@popperjs/core": "^2.9.2",
+  "autoprefixer": "^10.2.5",
+  "bootstrap": "^5.0.0-beta3",
+  "bootstrap-icons": "^1.5.0",
+  "jquery": "^3.6.0",
+  "popper.js": "^1.16.1",
+  "postcss-cli": "^8.3.1"
+ },
+ "description": "portfolio",
+ "devDependencies": {},
+ "license": "ISC",
+ "main": "index.html",
+ "name": "devon",
+ "scripts": {
+  "test": "echo \"Error: no test specified\" && exit 1"
+ },
+ "version": "1.0.0"
 }
