--- a/data/projects.toml
+++ b/data/projects.toml
@@ -8,7 +8,7 @@ image = "positively.jpeg"
 
 [[project]]
 title = "Car-Networking Simulation-Using Android"
-date = "3rd June 2021"
+date = "3rd Jun 2021"
 sample = "Basically I will just test the required color is present in the background ..."
 link = "https://www.instructables.com/Simple-Color-Detection-Using-OpenCV/"
 site = "instructables"
@@ -16,8 +16,16 @@ image = "carnet.png"
 
 [[project]]
 title = "Hostel Management System"
-date = "15th Dec. 2021"
-sample = "Hi, Today I'm going to show how to work with a simple LCD with the help of ..."
-link = "https://www.instructables.com/Simple-Color-Detection-Using-OpenCV/"
+date = "15th Dec 2021"
+sample = "Hostel Management System built to solve college hostel issues using Django-Framework"
+link = "https://github.com/DBMS-Web/hostel-management/"
+site = "instructables"
+image = "hms.png"
+
+[[project]]
+title = "Mars Rover Club, Website"
+date = "Feb 2021 - Apr 2021"
+sample = "Website developed for the mars rover society, IIITDM, as a part of their competition."
+link = "https://marsroversociety.netlify.app/"
 site = "instructables"
 image = "hms.png"
