--- a/data/intro.toml
+++ b/data/intro.toml
@@ -1,7 +1,8 @@
 section = "About"
 tag = "Student | Developer"
 description = "I'm Anurag Kar, currently a student in IIITDM Kacheepuram, Chennai pursuing B.tech in Smart Manufacturing. I'm passionate about Science and Technology field and love to work for the growth and developement of it."
-description2 = "Interests: These are my interests"
+description2 = "Linux, Backend Developement, mobile-app developement"
+description3 = "Art, Football, Astronomy"
 location = "Bhubaneswar, India"
 icon = "fas fa-map-marked-alt"
 resumetag = "Download resume"
