--- a/data/footer.toml
+++ b/data/footer.toml
@@ -1,20 +1,25 @@
 [[social]]
+name = "mail"
 icon = "fas fa-envelope"
 link = "mailto:anuragkar16@gmail.com"
 
 [[social]]
+name = "github"
 icon = "fab fa-github"
 link = "https://github.com/anuragdevon"
 
 [[social]]
+name = "linkedin"
 icon = "fab fa-linkedin-in"
 link = "https://www.linkedin.com/in/anurag-kar-472587192/"
 
 [[social]]
+name = "twitter"
 icon = "fab fa-twitter"
 link = "https://twitter.com/AnuragKar016"
 
 [[social]]
+name = "youtube"
 icon = "fab fa-youtube"
 link = "https://www.youtube.com/channel/UCrWytD5s1b29limBpsis9RQ"
 
