--- a/package.json
+++ b/package.json
@@ -22,7 +22,9 @@
   "postcss-cli": "^8.3.1"
  },
  "description": "portfolio",
- "devDependencies": {},
+ "devDependencies": {
+  "postcss": "^8.3.5"
+ },
  "license": "ISC",
  "main": "index.html",
  "name": "devon",
