--- a/data/profile.toml
+++ b/data/profile.toml
@@ -3,8 +3,8 @@ tag = "Student | Developer"
 description = "I'm Anurag Kar, currently a student in IIITDM Kacheepuram, Chennai pursuing B.tech in Smart Manufacturing. I'm passionate about Science and Technology field and love to work for the growth and developement of it."
 description2 = "Linux, Python, Backend, Mobile-app Developement"
 description3 = "Art, Football, Astronomy"
-location = "Bhubaneswar, India"
-icon = "fas fa-map-marked-alt"
+location = "Chennai, India"
+map = "map"
 resumetag = "Download resume"
-downloadicon = "fas fa-file-download"
+download = "download"
 pdf = "resume.pdf"
