--- a/data/resume.toml
+++ b/data/resume.toml
@@ -1,5 +1,5 @@
 title = "Skills and Experience"
-description = "Here is the list of skills and relevant experiences, for more details you check out LinkedIn."
+description = "Here is the list of skills and relevant experiences, for more details check out my LinkedIn."
 topic1 = "Skills"
 topic2 = "Experience"
 resume = "https://www.google.com"
