--- a/data/projects.toml
+++ b/data/projects.toml
@@ -1,9 +1,60 @@
 [[project]]
-title = "Positively"
-date = "24th-30th May 2021"
-sample = "Android-AI app made using Flutter SDK as a part of Hackathon."
-link = "https://github.com/Hack-IIITDM/Positively"
-tech = ["flutter", "tensor"]
+title = "Remote Shell Configuration"
+date = "October 2021"
+sample = "A script to automatically customize the remote shell to ease tech-support."
+link = "https://github.com/anuragdevon/RSC"
+tech = ["Bash"]
+
+[[project]]
+title = "i3 mini bar"
+date = "October 2021"
+sample = "A simple, fast and minimalist i3-status bar made on i3-bar."
+link = "https://github.com/anuragdevon/i3-mini-bar"
+tech = ["Bash"]
+
+[[project]]
+title = "Social Networking Bots"
+date = "August 2021"
+sample = "write something..."
+link = "https://github.com/anuragdevon/sn-bots"
+tech = ["python"]
+
+[[project]]
+title = "Url-Shortener"
+date = "August 2021"
+sample = "write something..."
+link = "https://github.com/anuragdevon/Url-Shortener-Go"
+tech = ["python"]
+
+[[project]]
+title = "WeatherApp"
+date = "July 2021"
+sample = "Used open weather API to create a simple weather showing app"
+link = "https://github.com/anuragdevon/Url-Shortener-Go"
+tech = ["python", "django"]
+
+
+[[project]]
+title = "Agora Video Chat App"
+date = "July 2021"
+sample = "Used Agora to create a simple/minimalist Video-Chat Service using Django and ..."
+link = "https://github.com/anuragdevon/Video-Chat-Django"
+tech = ["django", "python", "js"]
+
+[[project]]
+title = "Backend Netflix Clone"
+date = "July 2021"
+sample = "Used django to recreate the backend mechanism of video streaming platform, Netflix."
+link = "https://github.com/anuragdevon/netflix"
+tech = ["django", "python"]
+
+[[project]]
+title = "E-commerce Website"
+date = "June 2021 - July 2021"
+sample = "Website made using Django to understand the working of online shopping ..."
+link = "https://github.com/anuragdevon/Ecommerce/"
+tech = ["django", "python"]
+
 
 [[project]]
 title = "Personal Website"
@@ -13,15 +64,22 @@ link = "https://anuragkar.netlify.app/"
 tech = ["hugo"]
 
 [[project]]
+title = "Positively"
+date = "May 2021"
+sample = "Android-AI app made using Flutter SDK as a part of Hackathon."
+link = "https://github.com/Hack-IIITDM/Positively"
+tech = ["flutter", "tensor"]
+
+[[project]]
 title = "Car-Networking Simulation-Using Android"
-date = "3rd Jun 2021"
+date = "April 2021"
 sample = "Using bash scripting and python creating a real-time simulation of ..."
 link = "https://github.com/anuragdevon/IoT-Mobile"
 tech = ["python", "bash"]
 
 [[project]]
 title = "Hostel Management System"
-date = "15th Dec 2021"
+date = "Mar 2021 - Apr 2021"
 sample = "Hostel Management System built to solve college hostel issues using Django-Framework."
 link = "https://github.com/DBMS-Web/hostel-management"
 tech = ["django", "postgresql", "bootstrap"]
@@ -32,6 +90,14 @@ date = "Feb 2021 - Apr 2021"
 sample = "Website developed for the mars rover society, IIITDM, as a part of their ..."
 link = "https://marsroversociety.netlify.app/"
 tech = ["hugo"]
+
+[[project]]
+title = "Static Graph Generator"
+date = "Jun 2020"
+sample = "Using OpenGL to create a static graph generator"
+link = "https://github.com/anuragdevon/Static-Graph"
+tech = ["cpp"]
+
 
 [[project]]
 title = "Vidhai Website"
@@ -49,7 +115,7 @@ tech = ["cpp"]
 
 [[project]]
 title = "The Dark Shadow"
-date = "May 2020 - Jun 2020"
+date = "May 2020 - Jul 2020"
 sample = "Created a 3d-Adventure semi-Open World (Story-Driven) game using Unreal Engine 4."
 link = "https://www.youtube.com/watch?v=E-uwamSdH4c"
 tech = ["unreal", "cpp"]
@@ -63,7 +129,7 @@ tech = ["fusion"]
 
 [[project]]
 title = "Robocon 2020"
-date = "Jan 2021 - Aug 2021"
+date = "Jan 2020 - Jun 2020"
 sample = "Asian Terrestial Robotics Competition. Designed two rugby playing robots."
 link = "https://github.com/TARC-IIITDM"
 tech = ["fusion", "c"]
