--- a/assets/metadata/manifest.json
+++ b/assets/metadata/manifest.json
@@ -1,1 +1,36 @@
-{"name":"Anurag Kar's Website","short_name":"anuragdevon","icons":[{"src":"/android-chrome-192x192.png","sizes":"192x192","type":"image/png"},{"src":"/android-chrome-512x512.png","sizes":"512x512","type":"image/png"}],"theme_color":"#ffffff","background_color":"#ffffff","display":"standalone", "orientation": "portrait"}
+{
+    "name":"Anurag Kar's Website",
+    "short_name":"anuragdevon",
+    "icons":[
+       {
+          "src":"android-chrome-192x192.png",
+          "sizes":"192x192",
+          "type":"image/png",
+          "density":"0.75x",
+          "purpose":"any",
+          "platform":"android"
+       },
+       {
+         "src":"android-chrome-512x512.png",
+         "sizes":"512x512",
+         "type":"image/png",
+         "density":"0.75x",
+         "purpose":"any",
+         "platform":"android"
+      },
+      {
+         "src": "android-chrome-512x512.png",
+         "sizes": "196x196",
+         "type": "image/png",
+         "density": "1.0x",
+         "purpose": "maskable",
+         "platform": "android"
+      }
+
+    ],
+    "start_url": "/",
+    "theme_color":"#ffffff",
+    "background_color":"#ffffff",
+    "display":"standalone",
+    "orientation":"portrait"
+}
