fix hugo rendering

--- a/data/projects.toml
+++ b/data/projects.toml
@@ -1,4 +1,4 @@
-[project]]
+[[project]]
 title = "Genric Auth System"
 date = "March 2022"
 sample = "A Genric authentication system, can be integrated...."
