--- a/data/profile.toml
+++ b/data/profile.toml
@@ -1,7 +1,7 @@
 section = "About"
 tag = "Student | Developer"
 description = "I'm Anurag Kar, currently a student in IIITDM Kacheepuram, Chennai pursuing B.tech in Smart Manufacturing. I'm passionate about Science and Technology and love to work for the growth and developement of it."
-description2 = "Linux, Python, Cloud, DevOps/SRE"
+description2 = "Backend Development, Python, Linux, Cloud, DevOps/SRE"
 description3 = "Art, Football, Astronomy"
 location = "Chennai, India"
 map = "map"
