--- a/data/projects.toml
+++ b/data/projects.toml
@@ -1,6 +1,6 @@
 [[project]]
 title = "HeartGaurdian"
-date = "Jan 2023"
+date = "Jan 2023 - Ongoing"
 sample = "Live Heart Monitoring App developed using flutter and ..."
 link = "https://github.com/anuragdevon/HeartGaurdian"
 tech = ["flutter"]
